--- a/pepeizqs deals web/Pages/cost-web.cshtml
+++ b/pepeizqs deals web/Pages/cost-web.cshtml
@@ -6,65 +6,103 @@
 	Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-<div style="font-size: 22px; text-align: left; margin-bottom: 20px;">
-	@Herramientas.Idiomas.CogerCadena(Model.idioma, "Title", "CostWeb")
-</div>
+<div style="display: flex; flex-direction: column; gap: 20px;">
+	<div style="font-size: 22px; text-align: left;">
+		@Herramientas.Idiomas.CogerCadena(Model.idioma, "Title", "CostWeb")
+	</div>
 
-<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
-	@Herramientas.Idiomas.CogerCadena(Model.idioma, "String1", "CostWeb")
-</div>
+	<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+		@Herramientas.Idiomas.CogerCadena(Model.idioma, "String1", "CostWeb")
+	</div>
 
-<div style="display: flex; align-items: stretch;">
-	<div style="background-color: var(--fondoBotonPequeño); width: 6px; margin-bottom: 57px;"></div>
+	<div style="font-size: 22px; text-align: left; margin-top: 20px;">
+		@Herramientas.Idiomas.CogerCadena(Model.idioma, "String16", "CostWeb")
+	</div>
 
-	<div style="display: flex; flex-direction: column; gap: 20px; padding-top: 20px;">
-		<div style="display: flex; align-items: center;">
-			<div style="border: 3px solid var(--fondoBotonPequeño); width: 25px;"></div>
-			<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+	<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+		@{
+			double saldo = -50.13;
+
+			if (saldo >= 0)
+			{
+				@string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "String14", "CostWeb"), saldo.ToString().Replace(".", ","))
+				;
+			}
+			else
+			{
+				@string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "String15", "CostWeb"), saldo.ToString().Replace(".", ","))
+				;
+			}
+		}
+	</div>
+
+	<div style="font-size: 22px; text-align: left; margin-top: 20px;">
+		@Herramientas.Idiomas.CogerCadena(Model.idioma, "String17", "CostWeb")
+	</div>
+
+	<div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px;">
+		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+			<div>
+				@Herramientas.Idiomas.CogerCadena(Model.idioma, "String2", "CostWeb")
+			</div>
+			<hr />
+			<div style="display: flex; flex-direction: column; gap: 20px;">
 				<div>
-					@Herramientas.Idiomas.CogerCadena(Model.idioma, "String2", "CostWeb")
+					@Herramientas.Idiomas.CogerCadena(Model.idioma, "String10", "CostWeb")
 				</div>
-				<div style="margin-top: 10px;">
-					@Herramientas.Idiomas.CogerCadena(Model.idioma, "String3", "CostWeb")
+
+				<div>
+					@string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "String3", "CostWeb"), "30/1/2027")
 				</div>
 			</div>
 		</div>
 
-		<div style="display: flex; align-items: center;">
-			<div style="border: 3px solid var(--fondoBotonPequeño); width: 25px;"></div>
-			<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+			<div>
+				@Herramientas.Idiomas.CogerCadena(Model.idioma, "String4", "CostWeb")
+			</div>
+			<hr />
+			<div style="display: flex; flex-direction: column; gap: 20px;">
 				<div>
-					@Herramientas.Idiomas.CogerCadena(Model.idioma, "String4", "CostWeb")
+					@Herramientas.Idiomas.CogerCadena(Model.idioma, "String11", "CostWeb")
 				</div>
-				<div style="margin-top: 10px;">
-					@Herramientas.Idiomas.CogerCadena(Model.idioma, "String5", "CostWeb")
+
+				<div>
+					@string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "String5", "CostWeb"), "15/3/2028")
 				</div>
 			</div>
 		</div>
 
-		<div style="display: flex; align-items: center;">
-			<div style="border: 3px solid var(--fondoBotonPequeño); width: 25px;"></div>
-			<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+			<div>
+				@Herramientas.Idiomas.CogerCadena(Model.idioma, "String6", "CostWeb")
+			</div>
+			<hr />
+			<div style="display: flex; flex-direction: column; gap: 20px;">
 				<div>
-					@Herramientas.Idiomas.CogerCadena(Model.idioma, "String6", "CostWeb")
+					@Herramientas.Idiomas.CogerCadena(Model.idioma, "String12", "CostWeb")
 				</div>
-				<div style="margin-top: 10px;">
-					@Herramientas.Idiomas.CogerCadena(Model.idioma, "String7", "CostWeb")
+
+				<div>
+					@string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "String7", "CostWeb"), "6/12/2025")
 				</div>
 			</div>
 		</div>
 
-		<div style="display: flex; align-items: center;">
-			<div style="border: 3px solid var(--fondoBotonPequeño); width: 25px;"></div>
-			<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+			<div>
+				@Herramientas.Idiomas.CogerCadena(Model.idioma, "String8", "CostWeb")
+			</div>
+			<hr />
+			<div style="display: flex; flex-direction: column; gap: 20px;">
 				<div>
-					@Herramientas.Idiomas.CogerCadena(Model.idioma, "String8", "CostWeb")
+					@Herramientas.Idiomas.CogerCadena(Model.idioma, "String13", "CostWeb")
 				</div>
-				<div style="margin-top: 10px;">
-					@Herramientas.Idiomas.CogerCadena(Model.idioma, "String9", "CostWeb")
+
+				<div>
+					@string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "String9", "CostWeb"), "6/12/2025")
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
-
