--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -254,7 +254,7 @@
 
                                             @if (juego.IdSteam > 0)
                                             {
-                                                <a class="juego-boton-pequeño" style="@fondoBoton" href="@EnlaceAcortador.Generar("https:store.steampowered.com/app/" + juego.IdSteam.ToString(), "steam")" target="_blank">Steam</a>
+                                                <a class="juego-boton-pequeño" style="@fondoBoton" href="@EnlaceAcortador.Generar("https://store.steampowered.com/app/" + juego.IdSteam.ToString(), "steam")" target="_blank">Steam</a>
                                             }
                                         </div>
                                     }
