--- a/pepeizqs deals web/Pages/Componentes/Cuenta/NotificacionesCorreo.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/NotificacionesCorreo.razor
@@ -7,27 +7,22 @@
 
 <div>
 	<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px; margin-bottom: 20px;">
-		<div style="display: flex; align-items: center; gap: 30px;">
+		<div style="display: flex; align-items: start; gap: 30px;">
 			<div class="checkbox-caja">
-				<input type="checkbox" class="checkbox-interior" checked="@estadoMinimos" @onchange="ClickearCambioMinimos">
+				<input type="checkbox" class="checkbox-interior" checked="@estadoMinimos" @onchange="ClickearCambioMinimos" style="margin-top: 20px;">
 			</div>
 
-			<div>
-				<div style="margin-bottom: 10px;">
+			<div style="display: flex; flex-direction: column; gap: 10px;">
+				<div>
 					@Herramientas.Idiomas.CogerCadena(idioma, "Notifications1", "Account")
 				</div>
 
 				<div>
 					@Herramientas.Idiomas.CogerCadena(idioma, "Notifications2", "Account")
-				</div>			
-			</div>
-		</div>
-		
-		<div style="display: flex; align-items: center; gap: 30px;">
-			<div style="width: 95px;"></div>
+				</div>	
+				
+				<hr style="margin: 10px 0px" />
 
-			<div>
-				<hr />
 				<div style="font-size: 14px;">
 					@Herramientas.Idiomas.CogerCadena(idioma, "Notifications11", "Account")
 				</div>
